@@ -26,7 +26,7 @@
         android:orientation="horizontal" >
 
         <ImageButton
-            android:id="@+id/refrest_icon_button_list"
+            android:id="@+id/refresh_icon_button_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
